[tool.poetry]
name = "photo-mosaic"
version = "0.1.0"
description = "Create photo mosaic from collection of images"
authors = ["Johan Hidding <j.hidding@esciencecenter.nl>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
Pillow = "^8.3.2"
numpy = "^1.21.2"
scipy = "^1.7.1"
jupyterlab = "^3.1.10"
matplotlib = "^3.4.3"
pandas = "^1.3.2"
colormath = "^3.0.0"
plotnine = "^0.8.0"
h5py = "^3.4.0"
dask = {extras = ["total"], version = "^2021.9.0"}
graphviz = "^0.17"
POT = "^0.7.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
pytest = "^6.2.5"
pytest-mypy = "^0.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
plugins = ["numpy.typing.mypy_plugin"]
